--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   },
   "autoload": {
     "psr-4": {
-      "SimpleLibs\\Db": "src"
+      "SimpleLibs\\Db\\": "src"
     }
   },
   "autoload-dev": {
